# wisdom-it-readiness-toolkit

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  supply-chain-evidence.yml
assessments/: quick-check-v0.1.json
docs/: pr-ci-verification.md  release-verification-trigger.md
docs/releases/: v0.1.0.md
examples/: synthetic-responses.json
src/: cli.py  report.py  scorer.py
tests/: test_report.py  test_scorer.py  test_toolkit.py
